--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-sqlite": "~14.0.6",
@@ -42,8 +43,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "victory-native": "^41.4.0",
-    "expo-localization": "~15.0.3"
+    "victory-native": "^41.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
